# neutrino-mp-plugins

./: .gitignore  Makefile.am  acinclude.m4  configure.ac
blockads/: blockad.c  blockads.c  blockads.h  color.h  gfx.c  gfx.h  globals.c  globals.h  http.c  http.h  io.c  io.h  lcd.c  lcd.h  lcd_font.h  start.c  text.c  text.h
blockads/shellexec/: plconfig_blockads.mnu  wzops
clock/: clock.c  clock.conf  clock.h  color.h  gfx.c  gfx.h  io.c  io.h  readme.txt  ssaver.c  start.c  text.c  text.h
clock/shellexec/: cops  plconfig_clock.mnu
dvbsub/: dvbsub.cpp  dvbsubtitle.cpp  dvbsubtitle.h  osd.cpp  osd.h  tools.h
enigma/dreamflash/: dreamflash.cpp  dreamflash.h
enigma/getset/: getset.cpp  getset.h
enigma/movieplayer/: movieplayer.cpp  movieplayer.h
fx2/: Makefile.am
fx2/bouquet/: somain.c
fx2/c64emu/: Makefile.am  ndir.c  ndir.h  vga.c
fx2/lemm/: Makefile.am  lemm.c  somain.c  sound.c
fx2/lib/: Makefile.am  draw.c  draw.h  pig.c  rcinput.c  rcinput.h
fx2/linuxdoom-1.10/: Makefile  am_map.c  am_map.h  d_englsh.h  d_event.h  d_french.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_textur.h  d_think.h  d_ticcmd.h  doomdata.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dstrings.c  dstrings.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  i_main.c  i_net.c  i_net.h  i_sound.c  i_sound.h  i_system.c  (+86 more)
fx2/master/: Makefile.am  somain.c
fx2/mines/: Makefile.am  somain.c
fx2/pac/: Makefile.am  maze.c  somain.c
fx2/satfind/: Makefile.am
fx2/snake/: Makefile.am  somain.c
fx2/sokoban/: Makefile.am  board.c  somain.c
fx2/sol/: Makefile.am  somain.c
fx2/solitair/: Card.cpp  Makefile.am  Table.cpp  pnm_file.h  somain.cpp
fx2/sudoku/: Makefile.am  board.cpp  menu.cpp  menu.h  misc.cpp  somain.cpp
fx2/tank/: Makefile.am  board.c  somain.c
fx2/tetris/: Makefile.am  somain.c
fx2/vierg/: Makefile.am  board.c  somain.c
fx2/yahtzee/: Makefile.am  somain.c  yahtzee.c
getrc/: Makefile.am  README  getrc.c  io.c  io.h
input/: Makefile.am  README  gfx.c  gfx.h  input.c  input.h  inputd.c  io.c  io.h  text.c  text.h
links/: start.c
logomask/: color.h  gfx.c  gfx.h  io.c  io.h  logomask.c  logomask.h  logoset.c  start_logomask.c  start_logoset.c  text.c  text.h
logomask/shellexec/: plconfig_logomask.mnu
mosaic/: mosaic.cpp
msgbox/: Makefile.am  README  gfx.c  gfx.h  io.c  io.h  msgbox.c  msgbox.h  text.c  text.h  txtform.c
pip/: pip.cpp
pluginx/: pluginx.c
shellexec/: Makefile.am  README  color.h  gfx.c  gfx.h  io.c  io.h  lcd.c  lcd.h  lcd_font.h  shellexec.c  shellexec.cfg  shellexec.conf  shellexec.h  start.c  text.c  text.h
sysinfo/: color.h  gfx.c  gfx.h  io.h  start.c  sysinfo.c  sysinfo.h  text.c  text.h
tuxcal/: tuxcal.c  tuxcal.h
tuxcal/daemon/: tuxcald.c  tuxcald.h
tuxclock/daemon/: tuxclockd.c
tuxcom/: Makefile.am  tuxcom.c  tuxcom.h
tuxmail/: tuxmail.c  tuxmail.h
tuxmail/daemon/: tuxmaild.c  tuxmaild.h
tuxtxt/: tuxtxt.c  tuxtxt.h
tuxwetter/: Makefile.am  README  bmps.c  bmps.h  color.h  fb_display.c  fb_display.h  gfx.c  gfx.h  gif.c  gif.h  gif_lib.h  gifdecomp.c  gifdecomp.h  globals.h  http.c  http.h  io.c  io.h  jpeg.c  jpeg.h  lcd.c  lcd.h  lcd_font.h  parser.c  parser.h  php.c  php.h  pngw.c  pngw.h  resize.c  resize.h  start.c  text.c  text.h  tuxwetter.c  tuxwetter.conf  tuxwetter.h
vncviewer/: list.c  list.h
