AUTOMAKE_OPTIONS = gnu

SUBDIRS = \
	include tuxcom
#	include tuxmail tuxtxt tuxcom tuxcal tuxclock fx2 vncviewer enigma shellexec tuxwetter sysinfo clock logomask blockads links

#if BOXTYPE_DREAMBOX
#SUBDIRS += pip mosaic
#else
#SUBDIRS += pluginx
#endif

#pkgconfigdir = $(libdir)/pkgconfig
#pkgconfig_DATA = \
#	tuxbox-plugins.pc

